--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:startColor="#9561a1"
-        android:endColor="#122259"
+        android:startColor="#AC6741"
+        android:endColor="#9EA9CD"
         android:type="linear"/>
 </shape>
