--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,10 +14,10 @@
             android:gravity="center">
             <TextView android:id="@+id/address" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="24dp"
-                android:text="DHAKA, BD"/>
+                android:text="Porto,PT"/>
             <TextView android:id="@+id/updated_at" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="14dp"
-                android:text="20 April 2012, 20:08 PM"/>
+                android:text="25 janeiro 2021 20:00h"/>
         </LinearLayout>
 
 
@@ -27,7 +28,7 @@
             <TextView android:id="@+id/status" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="18dp"
                 android:layout_gravity="center"
-                android:text="Clear Sky"/>
+                android:text="Ceu limpo"/>
             <TextView android:id="@+id/temp" android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:textSize="90dp"
                 android:fontFamily="sans-serif-thin" android:layout_gravity="center"
@@ -36,11 +37,11 @@
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:orientation="horizontal" android:gravity="center">
                 <TextView android:id="@+id/temp_min" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:text="Min Temp: 05:05 AM"/>
+                    android:layout_height="wrap_content" android:text="Temp  Min: 05:05 AM"/>
                 <Space android:layout_width="50dp" android:layout_height="wrap_content"/>
 
                 <TextView android:id="@+id/temp_max" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:text="Max Temp: 05:05 PM"/>
+                    android:layout_height="wrap_content" android:text="Temp Max: 05:05 PM"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -56,13 +57,14 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/sunrise" android:tint="#FFFFFF"/>
+                        android:src="@drawable/sunrise"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:textSize="12dp" android:text="Sunrise"/>
+                        android:textSize="12dp" android:text="Nascer do Sol"/>
                     <TextView android:id="@+id/sunrise" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="06:40 AM"/>
+                        android:text="06:40h"/>
                 </LinearLayout>
                 <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
                 <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
@@ -70,10 +72,11 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/sunset" android:tint="#FFFFFF"/>
+                        android:src="@drawable/sunset"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:textSize="12dp" android:text="Sunset"/>
+                        android:textSize="12dp" android:text="Por do Sol"/>
                     <TextView android:id="@+id/sunset" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
                         android:text="06:40 AM"/>
@@ -84,10 +87,11 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/wind" android:tint="#FFFFFF"/>
+                        android:src="@drawable/wind"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:textSize="12dp" android:text="Wind"/>
+                        android:textSize="12dp" android:text="Vento"/>
                     <TextView android:id="@+id/wind" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
                         android:text="06:40 AM"/>
@@ -103,10 +107,11 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/pressure" android:tint="#FFFFFF"/>
+                        android:src="@drawable/pressure"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:textSize="12dp" android:text="Pressure"/>
+                        android:textSize="12dp" android:text="Pressão"/>
                     <TextView android:id="@+id/pressure" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
                         android:text="06:40 AM"/>
@@ -117,10 +122,11 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/humidity" android:tint="#FFFFFF"/>
+                        android:src="@drawable/humidity"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:textSize="12dp" android:text="Humidity"/>
+                        android:textSize="12dp" android:text="Humidade"/>
                     <TextView android:id="@+id/humidity" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
                         android:text="06:40 AM"/>
@@ -131,13 +137,14 @@
                     android:gravity="center" android:padding="8dp"
                     android:background="#3CF1EBF1">
                     <ImageView android:layout_width="25dp" android:layout_height="25dp"
-                        android:src="@drawable/info" android:tint="#FFFFFF"/>
+                        android:src="@drawable/info"
+                        app:tint="#FFFFFF" />
                     <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                        android:textSize="12dp" android:text="Created By"/>
+                        android:textSize="12dp" android:text="Criado por"/>
                     <TextView android:id="@+id/about" android:layout_width="wrap_content"
                         android:layout_height="wrap_content" android:textSize="14dp"
-                        android:text="Evan"/>
+                        android:text="Vitor e Tomas"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -150,7 +157,7 @@
 
     <TextView android:id="@+id/errorText" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_centerInParent="true"
-        android:visibility="gone" android:text="Something went wrong"/>
+        android:visibility="gone" android:text="Erro! Alguma Coisa correu mal ,tenta mais tarde"/>
 
 
 </RelativeLayout>
